--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   },
   "dependencies": {
     "react": "^18.3.1",
+    "react-chatbot-kit": "^2.2.2",
     "react-dom": "^18.3.1",
+    "react-draggable": "^4.4.6",
     "react-icons": "^5.2.1",
     "react-intersection-observer": "^9.10.3",
     "react-type-animation": "^3.2.0",
